--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
   "name": "generator-starling",
-  "version": "0.0.0",
-  "description": "Yeoman generator",
+  "version": "0.1.0",
+  "description": "Mobile development with Adobe Flash and Starling",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "zguillez/generator-starling",
   "author": {
     "name": "Guillermo de la Iglesia",
-    "email": "",
+    "email": "mail@zguillez.io",
     "url": "https://github.com/zguillez"
   },
   "scripts": {
     "test": "mocha"
   },
-  "files": [
-    "generators"
-  ],
-  "keywords": [
-    "yeoman-generator"
-  ],
+  "files": ["generators"],
+  "keywords": ["yeoman-generator", "adobe", "flash", "air", "starling"],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
