--- a/package.json
+++ b/package.json
@@ -13,16 +13,8 @@
   "scripts": {
     "test": "mocha"
   },
-  "files": [
-    "generators"
-  ],
-  "keywords": [
-    "yeoman-generator",
-    "adobe",
-    "flash",
-    "air",
-    "starling"
-  ],
+  "files": ["generators"],
+  "keywords": ["yeoman-generator", "adobe", "flash", "air", "starling"],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
