--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-starling",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Mobile development with Adobe Flash and Starling",
   "license": "MIT",
   "main": "app/index.js",
@@ -13,8 +13,16 @@
   "scripts": {
     "test": "mocha"
   },
-  "files": ["generators"],
-  "keywords": ["yeoman-generator", "adobe", "flash", "air", "starling"],
+  "files": [
+    "generators"
+  ],
+  "keywords": [
+    "yeoman-generator",
+    "adobe",
+    "flash",
+    "air",
+    "starling"
+  ],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
