--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "undefined",
-  "version": "1.0.0",
-  "description": "Starling App",
-  "main": "helloworld.fla",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-rename": "^0.1.4",
-    "grunt-text-replace": "^0.4.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "zguillez.io",
-  "license": "ISC"
+	"name": "undefined",
+	"version": "0.1.10",
+	"description": "Starling App",
+	"author": {
+		"name": "Guillermo de la Iglesia",
+		"email": "mail@zguillez.io",
+		"url": "https://github.com/zguillez"
+	},
+	"main": "helloworld.fla",
+	"dependencies": {},
+	"devDependencies": {
+		"grunt": "^0.4.5",
+		"grunt-rename": "^0.1.4",
+		"grunt-text-replace": "^0.4.0"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	}
 }
