--- a/generators/app/templates/bower.json
+++ b/generators/app/templates/bower.json
@@ -1,7 +1,8 @@
 {
 	"name": "undefined",
-	"version": "0.1.10",
+	"version": "1.0.0",
 	"description": "Starling App",
+	"private": true,
 	"dependencies": {},
 	"devDependencies": {}
 }
