--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-	"name": "generator-starling",
-	"version": "2.0.3",
-	"description": "Mobile development with Adobe Flash and Starling",
-	"license": "MIT",
-	"main": "app/index.js",
-	"repository": "zguillez/generator-starling",
-	"author": {
-		"name": "Guillermo de la Iglesia",
-		"email": "mail@zguillez.io",
-		"url": "https://github.com/zguillez"
-	},
-	"scripts": {
-		"test": "mocha"
-	},
-	"files": [
-		"generators"
-	],
-	"keywords": [
-		"yeoman-generator",
-		"adobe",
-		"flash",
-		"air",
-		"starling"
-	],
-	"dependencies": {
-		"yeoman-generator": "^0.22.5",
-		"chalk": "^1.1.3",
-		"yosay": "^1.1.1"
-	},
-	"devDependencies": {
-		"mocha": "*",
-		"grunt": "^1.0.1",
-		"grunt-rename": "^0.1.4",
-		"grunt-text-replace": "^0.4.0"
-	}
+  "name": "generator-starling",
+  "version": "2.0.3",
+  "description": "Mobile development with Adobe Flash and Starling",
+  "license": "MIT",
+  "main": "app/index.js",
+  "repository": "zguillez/generator-starling",
+  "author": {
+    "name": "Guillermo de la Iglesia",
+    "email": "mail@zguillez.io",
+    "url": "https://github.com/zguillez"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "files": [
+    "generators"
+  ],
+  "keywords": [
+    "yeoman-generator",
+    "adobe",
+    "flash",
+    "air",
+    "starling"
+  ],
+  "dependencies": {
+    "yeoman-generator": "^0.22.5",
+    "chalk": "^1.1.3",
+    "yosay": "^1.1.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-rename": "^0.1.4",
+    "grunt-text-replace": "^0.4.0",
+    "mocha": "*"
+  }
 }
